fix alignment

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ h2 {
 
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .recipe-list, .ingredient-list, .raw-ingredient-list {
